fixed spacing on the names of top categories

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -23,7 +23,7 @@
     display: flex;
     background-color: white;
     align-items: center;
-    justify-content: space-between;
-    padding: 5px;
+    justify-content: center;
+    padding: 10px;
 }
 
